# MallocSan

./: .gitmodules  CodingStyle  Makefile  Makefile.am  README  README.md  TODO  configure.ac  dw-disassembly.c  dw-disassembly.h  dw-log.c  dw-log.h  dw-preload.c  dw-printf.c  dw-printf.h  dw-protect-none.c  dw-protect-oid.c  dw-protect.h  dw-registers.c  dw-registers.h  dw-wrap-glibc.c  dw-wrap-glibc.h  simple.c
src/: Makefile.am  attributes.h  dw-backtrace.c  dw-backtrace.h  dw-cpuid.h  dw-disassembly.c  dw-disassembly.h  dw-exec-policy.c  dw-exec-policy.h  dw-log.c  dw-log.h  dw-patch.c  dw-patch.h  dw-preload.c  dw-printf.c  dw-printf.h  dw-protect-none.c  dw-protect-oid.c  dw-protect.h  dw-registers.c  dw-registers.h  dw-wrap-glibc.c  dw-wrap-glibc.h
tests/: Makefile.am
